<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversation_list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/swipe_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/swipeBackground">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_delete_forever_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/visible_view"
        android:background="?android:attr/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <ImageView
            android:id="@+id/recipient_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="@dimen/icon_margin"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:contentDescription="@string/recipient_icon_description" />

        <TextView
            android:id="@+id/recipient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginTop="@dimen/margin_sender"
            android:layout_toEndOf="@id/recipient_icon"
            android:text="@string/recipient_name_placeholder"
            android:textColor="?android:textColorPrimary" />

        <TextView
            android:id="@+id/message_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipient_name"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_toEndOf="@id/recipient_icon"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?android:textColorPrimary"
            android:text="@string/message_placeholder"
            android:textSize="@dimen/previewMessageSize" />

        <TextView
            android:id="@+id/time"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/time_placeholder"
            android:textColor="?android:textColorPrimary"
            android:layout_toEndOf="@id/recipient_icon"
            />
    </RelativeLayout>

</FrameLayout>